--- a/app/views/forecasts/show.html.erb
+++ b/app/views/forecasts/show.html.erb
@@ -1,4 +1,5 @@
-<h1 class="form-title">Weather Forecast</h1>
+<section id="hero-container">
+<h1 class="form-header">Weather Forecast</h1>
 
 <div class="weather-container">
   <h2><%= @city_name %>, <%= @country %></h2>
@@ -10,5 +11,5 @@
 </div>
 <div class="home-button">
 <a href="/forecast/new" class="button">New Forecast</a>
-
 </div>
+</section>
